--- a/frontend/src/components/button/button.module.css
+++ b/frontend/src/components/button/button.module.css
@@ -1,13 +1,19 @@
 .btn {
     width: 100%;
     font-size: 2rem;
+    font-weight: 700;
     padding: 0.8rem 1.6rem;
-    border: 2px solid #2e09b3;
-    background-color: #333;
+    border-radius: 15px;
+    border: 3px solid var(--blue-600);
+    background-color: var(--gray-800);
     transition: all 0.3s ease;
+    text-align: center;
     cursor: pointer;
+    color: var(--gray-300);
 }
 
 .btn:hover {
-    font-size: 2.2rem;
+    border: 3px solid var(--blue-400);
+    background-color: var(--blue-900);
+    color: var(--white);
 }
