--- a/frontend/src/components/input/input.module.css
+++ b/frontend/src/components/input/input.module.css
@@ -1,8 +1,10 @@
 input {
-    font-size: 1.6rem;
-    background-color: #333;
+    font-size: 2rem;
+    font-weight: 700;
+    background-color: var(--gray-800);
+    border-radius: 15px;
     color: #fff;
-    border: 2px solid #2e09b3;
+    border: 3px solid var(--blue-600);
     padding: 0.8rem 1.6rem;
     text-align: left;
 }
