--- a/frontend/src/layout/mainLayout.module.css
+++ b/frontend/src/layout/mainLayout.module.css
@@ -1,9 +1,20 @@
 header {
-    padding: 4rem;
+    padding: 3rem;
+    background-color: var(--gray-800);
+    border: 4px solid var(--blue-900);
+    border-top: none;
+    width: 100%;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
 }
 
 h1 {
-    font-size: 4.5rem;
+    font-size: 4rem;
+    transition: all 0.3s ease;
+}
+
+h1:hover {
+    font-size: 5.2rem;
 }
 
 main {
