feat: add pwa and styles for mobile devices

--- a/frontend/src/components/classic/AttemptChampion/attemptChampion.module.css
+++ b/frontend/src/components/classic/AttemptChampion/attemptChampion.module.css
@@ -28,6 +28,17 @@
     font-size: 1.8rem;
 }
 
+@media (max-width: 995px) {
+    .box {
+        width: 80px;
+        height: 80px;
+    }
+
+    .box > p {
+        font-size: 1.4rem;
+    }
+}
+
 .wrong {
     background-color: var(--wrong);
 }
