--- a/frontend/src/pages/classic/classic.module.css
+++ b/frontend/src/pages/classic/classic.module.css
@@ -14,3 +14,13 @@
 .btn {
     width: 100px;
 }
+
+@media (max-width: 995px) {
+    .form {
+        width: 100%;
+    }
+
+    .input::placeholder {
+        font-size: 1.4rem;
+    }
+}
