--- a/frontend/src/components/classic/AttemptList/attemptList.module.css
+++ b/frontend/src/components/classic/AttemptList/attemptList.module.css
@@ -5,13 +5,13 @@
     padding: 3rem 1.8rem;
     background-color: var(--gray-800);
     border: 2px solid var(--blue-900);
-
+    overflow-x: auto;
 }
 
 .head-list {
     display: flex;
     font-size: 1.4rem;
-    gap: 0.5rem;
+    gap: 0.6rem;
     justify-content: center;
 }
 
@@ -23,4 +23,20 @@
 .nothing-msg {
     font-size: 3rem;
     margin: 3rem 0;
+}
+
+@media (max-width: 995px) {
+    .head-list > h3 {
+        font-size: 1.2rem ;
+        width: 80px;
+    }
+
+    .head-list {
+        justify-content: flex-start;
+        align-items: center;
+    }
+
+    .list {
+        align-items: flex-start;
+    }
 }
