--- a/frontend/src/components/input/input.module.css
+++ b/frontend/src/components/input/input.module.css
@@ -12,3 +12,7 @@ input {
 input:disabled {
     border: 3px solid var(--blue-900);
 }
+
+input:active, input:focus {
+    outline: 1px solid var(--blue-400);
+}
