--- a/frontend/src/components/classic/AttemptChampion/attemptChampion.module.css
+++ b/frontend/src/components/classic/AttemptChampion/attemptChampion.module.css
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+    opacity: 0;
 }
 
 .box {
@@ -49,4 +50,8 @@
 
 .perfect {
     background-color: var(--success);
+}
+
+.animate {
+    opacity: 0;
 }
